[package]
name = "coraline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.1", features = ["derive"] }
log = "0.4.20"
env_logger = "0.11.2"


[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

