[package]
name = "coraline"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
log = "0.4.20"
mime_guess = "2.0.4"
reqwest = { version = "0.11", features = ["json", "stream","multipart"] }
rodio = "0.17.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }


[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

